# Spr2Png

./: .gitignore  ARM32.s  CMakeLists.txt  MakeCC,fd7  MakeDebug,fd7  Makefile,fe1  Makefile26,fe1  d2s_conv.c  d2s_lib.h  d2s_render.s  d2s_trim.c  d2s_ver.c  draw2spr.c  heap.s  library.c  library.h  p2s_ver.c  png2spr.c  s2p_const.c  s2p_const.h  s2p_frqsrt.c  s2p_lib.h  s2p_redinc.c  s2p_reduce.c  s2p_triinc.c  s2p_trim.c  s2p_ver.c  spr2png.c  strdup.s  types.h
!Spr2Png/: !Boot,feb  !Help  !Run,feb  !RunImage,ffb  !Sprite8,ff9  !Sprite822,ff9  !Sprites,ff9  !Sprites22,ff9  !Version,feb  KillDAdrw,ffc  KillDAspr,ffc  Messages  Sprites,ff9  Sprites22,ff9  Sprites8,ff9  Sprites822,ff9  Templates,fec  draw2spr,ff8  png2spr,ff8  spr2png,ff8
bas/: !RunImage,fd1
